--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 </div>      
 
                 <div class="socials mt-4">
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a class="social-item" href="https://github.com/MayconLPE"><i class="ti-github"></i></a>
+                    <a class="social-item" href="https://twitter.com/MayconLPE><i class="ti-twitter"></i></a>
                 </div>
             </div>              
             <div class="img-holder">
