--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Page navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" data-spy="affix" data-offset-top="0">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="assets/imgs/logo.svg" alt=""></a>
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#contact">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class="- btn btn-primary rounded ml-4" href="#">Fale Comigo!</a>
+                        <a class="- btn btn-primary rounded ml-4" href="https://t.me/MayconLPE">Fale Comigo!</a>
                     </li>
                 </ul>
             </div>
